--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,10 +8,24 @@ body
     padding: 0;
 
 }
+
+#cabecera
+{
+background: #88f;
+box-shadow: 0px 5px 30px 0px;
+color: white;
+font-weight: bold;
+margin: 0;
+padding: 0.5em;
+
+
+}
+
+
 #container
 {
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
@@ -21,4 +35,11 @@ body
 #container h1
 {
 font-size: 20px;
+}
+
+#post
+{
+    padding: 1em;
+
+
 }
