--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,26 +1,36 @@
 body 
 {
+    background-color: #1e1f24;
     color: #333;
-    text-align: left;
+    text-align: center;
     font-family: "Arial";
     font-size: 16px;
     margin: 0;
     padding: 0;
-
 }
 
 #cabecera
 {
-background: #88f;
-box-shadow: 0px 5px 30px 0px;
-color: white;
-font-weight: bold;
-margin: 0;
-padding: 0.5em;
-
-
+    background: #37488b;
+    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 5);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
 }
 
+#cabecera #logo
+{
+    width: 20 px;
+    vertical-align: middle;
+}
+
+#cabecera #tagline
+{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8 em;
+}
 
 #container
 {
@@ -29,17 +39,15 @@ padding: 0.5em;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
-
 }
 
 #container h1
 {
-font-size: 20px;
+    font-size: 20px;
 }
 
 #post
 {
+    background: white;
     padding: 1em;
-
-
 }
