--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body 
 {
     color: #333;
-    text-align: left;
+    text-align: center;
     font-family: "Arial";
     font-size: 16px;
     margin: 0;
@@ -11,17 +11,21 @@ body
 
 #cabecera
 {
-background: #88f;
-box-shadow: 0px 5px 30px 0px;
+background: #33a;
+box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 5);
 color: white;
 font-weight: bold;
 margin: 0;
 padding: 0.5em;
 
-
 }
 
-
+#cabecera #tagline
+{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
 #container
 {
     width: 70%;
@@ -40,6 +44,11 @@ font-size: 20px;
 #post
 {
     padding: 1em;
+}
 
-
+#footer
+{
+    background-color: #777;
+    color: white;
+    text-align: center;
 }
